     a time. (patch #1067)
   * fix [teleport] capturing villages with the wrong side (bug #11683)
   * SideWML recruit= no longer locks the faction except if explicitely wanted
     with the new key faction_from_recruit=yes
   * add "default_base" parameter to overlay terrains, which specifies the 
     base terrain the editor draws by default.
   * New [heal_unit] action.
   * Make it possible to change base and overlay separately in [terrain] and [terrain_mask] actions.
 * wesnothd
   * added expiration time to bans
   * added restart command to server that does gracefull restart
   * added option to do gracefull shut down for server
 * campaignd
   * made campaign server use gzip compression for networking
 * miscellaneous and bug fixes:
   * fixed issues with campaign info in non-compressed saved games
     (bug #11386)
   * Implemented the option to use the mouse selection clipboard in X11
     the new widget library also uses it.
   * fixed multiplayer_connect to handle leave_game command from server
   * improved reloading of game configs after installing or removing addons
   * fixed threading bug in upload_logs
   * dissallow_observers is on as default if side has controller=null
   * Fixed null-pointer reference in network code
   * Made networking code check system buffer size and limit send length
   * Added possibility to use per fight EV statistics proposed by maboul
   * Added smoother FPS limit to server
   * Fixed a mememory leak in networking code
   * Removed bug introduced in 1.5.0 that allowed use of :debug commands during
     network play
   * added some includes to fix compilation problems with Sun Studio 12
     (patch #1066)
   * Fixed unstoned units not having their attacks at their first turn
   * Prevent steadfast ability from lowering resistance if already over 50%

Version 1.5.0:
 * campaigns:
   * synchronize all campaign ids with their directory name
   * greatly updated the scenario music playlists in The Rise of Wesnoth,