@@ -250,7 +250,7 @@
                         upkeep=loyal
 
                         [status]
-                            hides=yes
+                            hidden=yes
                         [/status]
                     [/unit]
 
