@@ -320,7 +320,7 @@
                         [/modifications]
 
                         [status]
-                            hides=yes
+                            hidden=yes
                         [/status]
                     [/unit]
 
