@@ -952,7 +952,7 @@ _f,    _f,    _f,    _f,    _f,    _f,    Re,    _f,    _f,    _f,    _f,    _f,
         x={X}
         y={Y}
         [status]
-            hides=yes
+            hidden=yes
         [/status]
         [object]
             silent=yes
