@@ -102,7 +102,7 @@
 
 #define TURNED_TO_STONE
     [status]
-        stone=on
+        stoned=on
     [/status]
 #enddef
 
