@@ -302,8 +302,8 @@
                         upkeep=loyal
 
                         [status]
-                            hides=yes
-                            stone=yes
+                            hidden=yes
+                            stoned=yes
                         [/status]
                     [/unit]
 
