@@ -3063,7 +3063,7 @@
                         [/store_unit]
 
                         {VARIABLE Zhul_statue.id "Zhul_statue"}
-                        {VARIABLE Zhul_statue.status.stone "on"}
+                        {VARIABLE Zhul_statue.status.stoned "on"}
 
                         [unstore_unit]
                             variable=Zhul_statue
