@@ -10,7 +10,7 @@
         random_traits=no
 
         [status]
-            stone=on
+            stoned=on
         [/status]
 
         [modifications]
