@@ -175,7 +175,7 @@
             {VARIABLE experience $ai_unit[$id].experience}
             {VARIABLE poisoned $ai_unit[$id].status.poisoned}
             {VARIABLE slowed $ai_unit[$id].status.slowed}
-            {VARIABLE hides $ai_unit[$id].status.hides}
+            {VARIABLE hidden $ai_unit[$id].status.hidden}
             {VARIABLE x $ai_unit[$id].x}
             {VARIABLE y $ai_unit[$id].y}
             [if]
@@ -198,7 +198,7 @@
                 name=$name
                 random_traits=yes
                 [status]
-                    hides=$hides
+                    hidden=$hidden
                     slowed=$slowed
                     poisoned=$poisoned
                 [/status]
@@ -228,7 +228,7 @@
             {CLEAR_VARIABLE gender}
             {CLEAR_VARIABLE experience}
             {CLEAR_VARIABLE poisoned}
-            {CLEAR_VARIABLE hides}
+            {CLEAR_VARIABLE hidden}
             {CLEAR_VARIABLE slowed}
             {CLEAR_VARIABLE hp_add}
             {CLEAR_VARIABLE max_hp}
