@@ -244,7 +244,7 @@ Xu          , Xu          , Qxu         , Qxu         , Ql          , Ql        
             generate_description=yes
             hitpoints=4
             [status]
-                stone=on
+                stoned=on
             [/status]
         [/unit]
         [unit]
