@@ -59,7 +59,9 @@ Version 1.5.0+svn:
    * add "default_base" parameter to overlay terrains, which specifies the 
      base terrain the editor draws by default.
    * New [heal_unit] action.
-   * Make it possible to change base and overlay separately in [terrain] and [terrain_mask] actions.
+   * Make it possible to change base and overlay separately in [terrain] and
+    [terrain_mask] actions.
+   * rename the "hides" status as "hidden"
  * wesnothd
    * added expiration time to bans
    * added restart command to server that does gracefull restart
